--- a/resources/sass/_flex-grid.scss
+++ b/resources/sass/_flex-grid.scss
@@ -32,6 +32,12 @@
 	justify-content: space-between;
 }
 
+.flex-align-centered {
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+}
+
 .row {
 	@include flex-row(nowrap);
 
