--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -58,11 +58,11 @@ input, select, textarea {
 	font-size: 1rem;
 	color: $black;
 	background-color: $light-grey;
-	border: 0.0625em solid $medium-grey;
+	border: 0.0625em solid $sky-blue;
 }
 input:focus, select:focus, textarea:focus {
 	background-color: $white;
-	border: 0.0625em solid $dark-grey;
+	border: 0.0625em solid $medium-grey;
 }
 input.input,
 textarea.textarea {
