--- a/resources/sass/templates/_home-page.scss
+++ b/resources/sass/templates/_home-page.scss
@@ -3,8 +3,20 @@ div.home-content-block {
 	max-width: 100vw;
 	height: 100%;
 	min-height: calc(100vh - 4em);
+
+	&.welcome {
+		h2 {
+			margin: 0;
+			line-height: 1;
+		}
+
+		.column:last-child {
+			@include padding-responsive(0.85);
+		}
+	}
+
+	.content-block {
+		@include padding-responsive(0.85);
+	}
 }
 
-div.home-content-block .content-block {
-	@include padding-responsive(0.85)
-}
