--- a/resources/sass/templates/_secondary-pages.scss
+++ b/resources/sass/templates/_secondary-pages.scss
@@ -10,6 +10,10 @@ div.page-content-block {
 
 	.content-block {
 		@include h-padding-responsive(0.85);
+
+		.race-item {
+			@include flex-row(nowrap);
+		}
 	}
 }
 
