--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -31,43 +31,43 @@ $footer-navigation-height: 2em;
 /****** MARGINS *****/
 /* Margin both vertical and horizontal */
 $margin-xs: 0px;
-$margin-md: 35px;
-$margin-lg: 50px;
+$margin-md: 40px;
+$margin-lg: 60px;
 $margin-xl: 80px;
-$margin-xxl: 110px;
+$margin-xxl: 100px;
 
 /* Margin horizontal */
-$horizontal-margin-xs: 40px;
-$horizontal-margin-md: 2vh;
-$horizontal-margin-lg: 4vh;
-$horizontal-margin-xl: 5vh;
-$horizontal-margin-xxl: 7vh;
+$horizontal-margin-xs: 20px;
+$horizontal-margin-md: 40px;
+$horizontal-margin-lg: 60px;
+$horizontal-margin-xl: 80px;
+$horizontal-margin-xxl: 100px;
 
 /* Margin vertical */
-$vertical-margin-xs: 40px;
-$vertical-margin-md: 2vh;
-$vertical-margin-lg: 4vh;
-$vertical-margin-xl: 5vh;
-$vertical-margin-xxl: 7vh;
+$vertical-margin-xs: 20px;
+$vertical-margin-md: 40x;
+$vertical-margin-lg: 60px;
+$vertical-margin-xl: 80px;
+$vertical-margin-xxl: 100px;
 
 /****** PADDINGS *****/
 /* Padding both vertical and horizontal */
 $padding-xs: 0px;
-$padding-md: 35px;
-$padding-lg: 50px;
+$padding-md: 20px;
+$padding-lg: 60px;
 $padding-xl: 80px;
-$padding-xxl: 110px;
+$padding-xxl: 100px;
 
 /* Padding horizontal */
-$horizontal-padding-xs: 40px;
-$horizontal-padding-md: 2vh;
-$horizontal-padding-lg: 3vh;
-$horizontal-padding-xl: 4vh;
-$horizontal-padding-xxl: 7vh;
+$horizontal-padding-xs: 20px;
+$horizontal-padding-md: 40px;
+$horizontal-padding-lg: 60px;
+$horizontal-padding-xl: 80px;
+$horizontal-padding-xxl: 100px;
 
 /* Padding vertical */
-$vertical-padding-xs: 40px;
-$vertical-padding-md: 2vh;
-$vertical-padding-lg: 3vh;
-$vertical-padding-xl: 4vh;
-$vertical-padding-xxl: 7vh;
+$vertical-padding-xs: 20px;
+$vertical-padding-md: 40px;
+$vertical-padding-lg: 60px;
+$vertical-padding-xl: 80px;
+$vertical-padding-xxl: 100px;
